@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-08T16:09:46Z",
+  "timestamp" : "2023-08-09T00:42:48Z",
   "count_outdated" : 4875,
   "uniques_outdated" : 1439,
-  "count" : 4946,
-  "uniques" : 1488,
+  "count" : 4951,
+  "uniques" : 1492,
   "clones" : [
     {
       "timestamp": "2023-07-26T00:00:00Z",
@@ -106,12 +106,12 @@
     },
     {
       "timestamp": "2023-08-08T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 8,
+      "count_minmax": [ 2, 8 ],
+      "count_decinc": [ 0, 8 ],
+      "uniques": 6,
+      "uniques_minmax": [ 1, 6 ],
+      "uniques_decinc": [ 0, 6 ]
     }
   ]
 }
