@@ -1,6 +1,6 @@
 {
-  "count": 71,
-  "uniques": 41,
+  "count": 76,
+  "uniques": 44,
   "clones": [
     {
       "timestamp": "2023-07-26T00:00:00Z",
@@ -59,8 +59,8 @@
     },
     {
       "timestamp": "2023-08-08T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 8,
+      "uniques": 6
     }
   ]
 }
